# ogms_studio

./: .gitignore  .gitmodules  README.md  pyproject.toml
core/: scenario.ts
electron/: menu.ts
scenario/: config.yaml
scenario/hello/: index.ts
scenario/hello/ldle/: pyproject.toml
scenario/hello/ldle/src/: hello.py
ui/: index.html
ui/src/: Framework.tsx  main.tsx  scenario.ts
ui/src/components/iconBar/: iconBar.tsx  types.ts
