[project]
name = "ogms_studio"
version = "0.1.0"
description = "Studio for Open Geographic Modeling and Simulation, powered by py-noodle"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdal==3.10.2",
]

[tool.uv.workspace]
members = [
    "ldle",
    "scenario/*/ldle",
]

[tool.uv.sources]
ldle = { workspace = true }
py-noodle = { path = "py-noodle", editable = true }

[dependency-groups]
dev = [
    "ldle",
    "py-noodle",
]
